--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,20 +16,22 @@
                 </div>
                 <div class=" example-collection-cell hide-collection-cell">
                     <div class="example-collection-grid nested">
-                        <div class="example-collection-cell _1of2">
-                            <div class="example-collection-item right-one">
-                               <div class="right-header-content">
-                                <a class="right-image-text-btn" href="javascript:void(0);">Explore Venues <img src="/assets/images/ui-assets/arrow-white.png"/></a>
-                               </div>
-                            </div>
+                      <div class="example-collection-cell _1of2">
+                        <div class="example-collection-item right-two" >
+                          <div class="right-header-content">
+                            <a class="right-image-text-btn" href="javascript:void(0);">Explore Events <img src="/assets/images/ui-assets/arrow-white.png"/></a>
+                          </div>
                         </div>
-                        <div class="example-collection-cell _1of2">
-                            <div class="example-collection-item right-two" >
-                                <div class="right-header-content">
-                                    <a class="right-image-text-btn" href="javascript:void(0);">Explore Events <img src="/assets/images/ui-assets/arrow-white.png"/></a>
-                                   </div>
-                            </div>
+                      </div>
+                      <div class="example-collection-cell _1of2">
+                        <div class="example-collection-item right-four" >
+                          <div class="right-header-content">
+                            <a class="right-image-text-btn" href="javascript:void(0);">Create with us <img src="/assets/images/ui-assets/arrow-white.png"/></a>
+                          </div>
                         </div>
+                      </div>
+
+
                         <div class="example-collection-cell _1of2">
                             <div class="example-collection-item right-three" >
                                 <div class="right-header-content">
@@ -37,13 +39,13 @@
                                    </div>
                             </div>
                         </div>
-                        <div class="example-collection-cell _1of2">
-                            <div class="example-collection-item right-four" >
-                                <div class="right-header-content">
-                                    <a class="right-image-text-btn" href="javascript:void(0);">Create with us <img src="/assets/images/ui-assets/arrow-white.png"/></a>
-                                   </div>
-                            </div>
+                      <div class="example-collection-cell _1of2">
+                        <div class="example-collection-item right-one">
+                          <div class="right-header-content">
+                            <a class="right-image-text-btn" href="javascript:void(0);">Explore Venues <img src="/assets/images/ui-assets/arrow-white.png"/></a>
+                          </div>
                         </div>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -59,9 +61,9 @@
                 <div class="example-collection-cell">
                     <div class="example-collection-item what-happen" >
                         <div class="simulation-content ">
-                            <p class="p">Started AUG 12</p>
+                            <p class="paragraph">Started AUG 12</p>
                             <h3 class="h3">Muse: Enter The Simulation</h3>
-                            <p class="p">CONCERT · STAGEVERSE STADIUM</p>
+                            <p class="paragraph">CONCERT · STAGEVERSE STADIUM</p>
                             <!-- <a class="learnmore" href="javascript:void(0);">Learn more</a> -->
                         </div>
                     </div>
@@ -71,22 +73,22 @@
                         <div class="example-collection-cell ">
                             <div class="example-collection-item simulation-2" >
                                 <div class="sumilation-content-2">
-                                    <p class="p">COMING SOON · may 31</p>
+                                    <p class="paragraph">COMING SOON · may 31</p>
                                     <h3 class="h3">Shantell Martin</h3>
-                                    <p class="p">ART GALLERY · CENTER STAGE</p>
+                                    <p class="paragraph">ART GALLERY · CENTER STAGE</p>
                                 </div>
                             </div>
                         </div>
                         <div class="example-collection-cell ">
                             <div class="example-collection-item simulation-3" >
                                 <div class="sumilation-content-2">
-                                    <p class="p">COMING SOON · may 31</p>
+                                    <p class="paragraph">COMING SOON · may 31</p>
                                     <h3 class="h3">Neon Dreams</h3>
-                                    <p class="p">NFT DROP · CENTER STAGE</p>
+                                    <p class="paragraph">NFT DROP · CENTER STAGE</p>
                                 </div>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -96,9 +98,9 @@
                 <div class="example-collection-cell">
                     <div class="example-collection-item what-happen" >
                         <div class="simulation-content ">
-                            <p class="p">Started AUG 12</p>
+                            <p class="paragraph">Started AUG 12</p>
                             <h3 class="h3">Muse: Enter The Simulation</h3>
-                            <p class="p">CONCERT · STAGEVERSE STADIUM</p>
+                            <p class="paragraph">CONCERT · STAGEVERSE STADIUM</p>
                             <!-- <a class="learnmore" href="javascript:void(0);">Learn more</a> -->
                         </div>
                     </div>
@@ -126,9 +128,9 @@
                     </div>
             </div>
             </ng-template>
-         
-          
-           
+
+
+
         </owl-carousel-o>
         <div>
             <div class="container title-container">
@@ -172,20 +174,20 @@
             </ng-template>
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
-                 
+
                     <div class="slide example-collection-item muse-2" >
                         <div class="sumilation-content-venues">
                             <p class="h3">Stageverse Stadium</p>
                             <!-- <h3 class="h3">CONCERT · MUSE STADIUM</h3>
                             <a class="learnmore" href="javascript:void(0);">Learn more</a> -->
                         </div>
-                    
+
                     </div>
             </div>
             </ng-template>
-         
-          
-           
+
+
+
         </owl-carousel-o>
 
         <div>
@@ -194,14 +196,14 @@
                 <h1 class="title-lg">Collect nft-based avatars and digital goods</h1>
             </div>
         </div>
-   
+
         <owl-carousel-o [options]="customOptions">
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
                     <div class="example-collection-item collection-left" >
                         <div class="muse-content">
                             <h3 class="h3">Muse NPC Collection</h3>
-                            <p class="p">Outfits · Limites</p>
+                            <p class="paragraph">Outfits · Limites</p>
                             <!-- <a class="learnmore" href="javascript:void(0);">Learn more</a> -->
                         </div>
                     </div>
@@ -209,19 +211,19 @@
             </ng-template>
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
-                 
+
                     <div class="example-collection-item collection-right" >
                         <div class="muse-content">
                             <h3 class="h3">Balmain Simulation Collection</h3>
-                            <p class="p">Outfits · Limites</p>
+                            <p class="paragraph">Outfits · Limites</p>
                             <!-- <a class="learnmore" href="javascript:void(0);">Learn more</a> -->
                         </div>
                     </div>
             </div>
             </ng-template>
-         
-          
-           
+
+
+
         </owl-carousel-o>
         <div>
             <div class="container title-container">
@@ -234,7 +236,7 @@
                 <div class="example-collection-cell membership-left">
                     <div class="example-collection-item " >
                        <div class="membership-text"> <h1 class="membership-title">FUTURE CULTURE CLUB</h1>
-                       
+
                         <p class="membership-subtitle">Apply to be part of the most exclusive members club of the metaverse and gain access to events, perks and more. + ownership (first members club owned by its members) + buy, sell, trade, collect/own</p>
                         <a class="right-image-text-btn btn-position" href="javascript:void(0);" >Get an Invite<img src="/assets/images/ui-assets/arrow-white.png"/></a>
 
@@ -246,13 +248,13 @@
                         <div class="membership-right">
 
                         </div>
-                     
+
                     </div>
                 </div>
             </div>
         </div>
-        
-    
+
+
 
         <div>
             <div class="container title-container">
@@ -264,13 +266,13 @@
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
                 <div class="slide stageverse-1">
-                 
+
                         <div class="stageverse-content ">
                             <h4 class="stage-heading">Customizable Avatars</h4>
                             <p class="stageverse-text stage-paragraph">Flex your style with full-body, expressive avatars.</p>
-                          
+
                         </div>
-                    
+
                 </div>
             </div>
             </ng-template>
@@ -280,7 +282,7 @@
                     <div class="stageverse-content ">
                         <h4 class="stage-heading">Friends & Parties</h4>
                         <p class="stageverse-text stage-paragraph">Meet up and explore together. Can we add one more line here?</p>
-                      
+
                     </div>
                     </div>
             </div>
@@ -291,7 +293,7 @@
                     <div class="stageverse-content ">
                         <h4 class="stage-heading">Spatial Voice Chat</h4>
                         <p class="stageverse-text stage-paragraph">Talk and connect with others in beautifully-designed 3D spaces</p>
-                      
+
                     </div>
                 </div>
             </div>
@@ -302,52 +304,52 @@
                     <div class="stageverse-content ">
                         <h4 class="stage-heading">Virtual Goods</h4>
                         <p class="stageverse-text stage-paragraph">Play and express yourself with interactive toys and collectible items</p>
-                      
+
                     </div>
                 </div>
             </div>
             </ng-template>
-           
+
         </owl-carousel-o>
         <!-- <div>
             <div class="example-collection-grid">
                 <div class="example-collection-cell">
                     <div class="example-collection-item stageverse-1" >
-                     
+
                      <div class="stageverse-content ">
                         <h3 class="h3">Customizable Avatars</h3>
                         <p class="stageverse-text">Flex your style with full-body, expressive avatars.</p>
-                      
+
                     </div>
                     </div>
                 </div>
                 <div class="example-collection-cell">
                     <div class="example-collection-item stageverse-2" >
-                     
+
                      <div class="stageverse-content ">
                         <h3 class="h3">Friends & Parties</h3>
                         <p class="stageverse-text">Meet up and explore together. Can we add one more line here?</p>
-                      
+
                     </div>
                     </div>
                 </div>
                 <div class="example-collection-cell">
                     <div class="example-collection-item stageverse-3" >
-                       
+
                         <div class="stageverse-content ">
                             <h3 class="h3">Spatial Voice Chat</h3>
                             <p class="stageverse-text">Talk and connect with others in beautifully-designed 3D spaces</p>
-                          
+
                         </div>
                     </div>
                 </div>
                 <div class="example-collection-cell">
                     <div class="example-collection-item stageverse-4" >
-                        
+
                         <div class="stageverse-content ">
                             <h3 class="h3">Virtual Goods</h3>
                             <p class="stageverse-text">Play and express yourself with interactive toys and collectible items</p>
-                          
+
                         </div>
                     </div>
                 </div>
@@ -366,17 +368,17 @@
                     <div class="example-collection-item" >
                         <div class="culture-text">
                             <h1 class="culture-title" style="color: white;">MOVE CULTURE FORWARD TOGETHER</h1>
-                            
+
                             <p class="culture-subtitle">Apply to be part of the most exclusive members club of the metaverse and gain access to events.</p>
                             <br>
                             <a class="left-image-text-btn culture-btn create-with-us" href="javascript:void(0);">Create with us<img  class="create-img" src="/assets/images/ui-assets/black-arrow.png"/></a>
                             <a class="left-image-text-btn culture-btn join-our-discord"href="javascript:void(0);">Join our Discord<img src="/assets/images/ui-assets/black-arrow.png"/></a>
                         </div>
-                     
+
                     </div>
                 </div>
             </div>
-        </div>  
+        </div>
 
         <div>
             <div class="container title-container">
@@ -402,7 +404,7 @@
                             <a class="left-image-text-btn download-btn" href="javascript:void(0);">Download<img src="/assets/images/ui-assets/arrow-white.png"/></a>
 
                         </div>
-                     
+
                     </div>
                 </div>
                 <div class="example-collection-cell ">
@@ -413,7 +415,7 @@
                             <a class="left-image-text-btn download-btn" href="javascript:void(0);">Download<img src="/assets/images/ui-assets/arrow-white.png"/></a>
 
                         </div>
-                     
+
                     </div>
                 </div>
                 <div class="example-collection-cell">
@@ -424,7 +426,7 @@
                             <a class="left-image-text-btn download-btn" href="javascript:void(0);">Download<img src="/assets/images/ui-assets/arrow-white.png"/></a>
 
                         </div>
-                     
+
                     </div>
                 </div>
                 <div class="example-collection-cell">
@@ -433,11 +435,11 @@
                             <img class="download-img" src="/assets/images/ui-assets/coming-soon.png" />
 
                         </div>
-                     
+
                     </div>
                 </div>
             </div>
-        </div>  
+        </div>
 
         <!-- =======================footer============================================================================================== -->
         <div>
@@ -460,13 +462,13 @@
                      <div class="footer-sub-contianer">
                         <h2 class="footer-sub-heading">FUTURE CULTURE HAPPENS HERE.</h2>
                         <p class="footer-p-text">Stageverse is an NFT-based metaverse of beautifully designed 3D spaces, called Stages, that aims to connect a vibrant, diverse and pioneering collective of people, creators, communities and brands. The collective use Stageverse to socialize, connect, create, discover, grow, elevate creativity and move culture forward.</p>
-                       
+
                     <div style="display: flex;flex-direction: row;">
-                    
+
                     <div class="leftinput" >
 
                     </div>
-                   
+
                            <div style="width: 100%;">
                         <input type="text" class="search" placeholder="Get News & Updates"/>
                     </div>
@@ -489,7 +491,7 @@
                 </div>
             </div>
         </div>
- 
+
         <div class="content footer invisible">
             <app-footer [isReducedView]="false"></app-footer>
         </div>
