--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,6 @@
 @import "./styles";
 
-// On screens that are 600px or less, set the css property 
+// On screens that are 600px or less, set the css property
 @media screen and (max-width: 600px) {
     .desktop{
         display: none;
@@ -207,7 +207,7 @@
     margin-top: 40px;
 }
 .footer-social-media{
-    display: flex; 
+    display: flex;
     justify-content: space-between;
     margin-top: 3%;
 }
@@ -219,7 +219,7 @@
     margin-left: 20px;
 }
 .mt-2{
-    margin-top:2%
+    margin-top:13.5vh;
 }
 .title-sm{
     height: 15px;
@@ -242,13 +242,13 @@
     text-transform: uppercase;
 }
 .title-container{
-    width: 90%; 
-    margin-left:auto; 
-    margin-right: auto; 
+    width: 90%;
+    margin-left:auto;
+    margin-right: auto;
     padding: 30px 0px;
 }
 .left-image{
-   
+
     background-image:
     linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%),
     url('/assets/images/ui-assets/CenterStage.png');
@@ -256,9 +256,9 @@
     background-size:100% 100%;
     object-fit: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 140vh;
 
-      
+
 }
 .left-image-text{
     margin-top: 6%;
@@ -330,25 +330,32 @@
     background-image: url('/assets/images/ui-assets/CenterStage_62 1.png');    background-size: auto; background-repeat: no-repeat;    background-position: bottom;height: 25vh;
 }
 .right-two{
-    background-image: url('/assets/images/ui-assets/IMG_2554 2.png');    background-size: auto; background-repeat: no-repeat;    background-position: center;
+    background-image: url('/assets/images/ui-assets/IMG_2554 2.png');    background-size: auto; background-repeat: no-repeat;    background-position: center;height: 50vh;
 }
 .right-three{
-    background-image: linear-gradient(150.58deg, rgba(0, 0, 0, 0.6) 1.14%, rgba(0, 0, 0, 0.265625) 48.1%, rgba(0, 0, 0, 0) 60.46%),url('/assets/images/ui-assets/card2-1.png');    background-size: auto; background-repeat: no-repeat;    background-position: bottom;height: 25vh;
+    background-image: linear-gradient(150.58deg, rgba(0, 0, 0, 0.6) 1.14%, rgba(0, 0, 0, 0.265625) 48.1%, rgba(0, 0, 0, 0) 60.46%),url('/assets/images/ui-assets/card2-1.png');    background-size: auto; background-repeat: no-repeat;    background-position: left;height: 50vh;
 }
 .right-four{
-    background-image: url('/assets/images/ui-assets/CenterStage_94_RTFKT_1 1.png');    background-size: auto; background-repeat: no-repeat;    background-position: center;
+    background-image: url('/assets/images/ui-assets/CenterStage_94_RTFKT_1 1.png');    background-size: auto; background-repeat: no-repeat;    background-position: left;
 }
 .simulation-2{
     background-image: linear-gradient(
         180deg
         , rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%),url('/assets/images/ui-assets/shantel.png');background-size: auto; background-repeat: no-repeat;    background-position: center;
-        height: 68vh;
+        height: 74vh;
 }
 .simulation-3{
     background-image: linear-gradient(
         180deg
         , rgba(126, 62, 62, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%),url('/assets/images/ui-assets/rambow.png');background-size: auto; background-repeat: no-repeat;    background-position: center;
-        height: 68vh;
+        height: 74vh;
+}
+.paragraph{
+  margin-top: 0px;
+  margin-bottom: 3px;
+  font-weight: 600;
+  font-size: 16px;
+  text-transform: uppercase;
 }
 .example-collection-grid {
     display: -webkit-box;
@@ -375,21 +382,21 @@
     flex: 1 0 auto;
 }
 .what-happen{
-   
+
     background-image:
     url('/assets/images/ui-assets/simulation.png');
 
     background-size:100% 100%;
     object-fit: cover;
     background-repeat: no-repeat;
-       height: 68vh;
+    height: 74vh;
        background-position: center;
-      
+
 }
 .simulation-content{
     position: relative;
-    top: 45vh;
-    margin-left: 5%;
+    top: 57vh;
+    margin-left: 10%;
 }
 .p{
     font-style: normal;
@@ -404,7 +411,7 @@
     font-style: normal;
     font-weight: bold;
     font-size: 1.8vw;
-    line-height: 7vh;
+    line-height: 5vh;
     letter-spacing: -0.01em;
     font-feature-settings: "ss02" on;
     color: #FFFFFF;
@@ -427,10 +434,10 @@
 //     color: #FFFFFF;
 // }
 .sumilation-content-2{
-    position: relative;
-    top: 45vh;
-   text-align: left;
-   margin-left: 5%;
+  position: relative;
+  top: 57vh;
+  text-align: left;
+  margin-left: 10%;
 }
 .sumilation-content-3{
     position: relative;
@@ -442,7 +449,7 @@
     position: relative;
     top: 58vh;
    text-align: left;
-   margin-left: 5%;
+   margin-left: 10%;
 }
 .example-collection-cell {
     display: -webkit-box;
@@ -487,9 +494,8 @@
 }
 .muse-content{
     position: relative;
-    top: 55vh;
-    text-align: left;
-    margin-left: 5%;
+    top: 66vh;
+    margin-left: 10%;
 }
 
 .culture{
@@ -501,7 +507,7 @@
     position: relative;
     top: 30%;
     text-align: left;
-    margin-left: 5%;  
+    margin-left: 5%;
     width: 60vw;
 }
 .culture-subtitle{
@@ -529,7 +535,7 @@ color: #FFFFFF;
     background-size:100% 100%;
     object-fit: cover;
     background-repeat: no-repeat;
-    height: 68vh;
+    height: 80vh;
     background-position: center;
 }
 .collection-right{
@@ -537,7 +543,7 @@ color: #FFFFFF;
     background-size:100% 100%;
     object-fit: cover;
     background-repeat: no-repeat;
-       height: 68vh;
+       height: 80vh;
        background-position: center;
 }
 .membership{
@@ -545,7 +551,7 @@ color: #FFFFFF;
     height: 70vh;
 }
 .membership-left{
-  
+
 }
 .membership-right{
     background: linear-gradient(93.91deg, #0b091a00 -213.78%, rgba(0, 0, 0, 0) 195.01%), url(/assets/images/ui-assets/culture.png);
@@ -558,7 +564,7 @@ color: #FFFFFF;
 }
 .membership-text{
     position: relative;
-    top: 30%;
+    top: 20%;
     text-align: left;
     margin-left: 10%;
 }
@@ -566,7 +572,7 @@ color: #FFFFFF;
     position: relative;
     top: 57vh;
     margin-left: 16%;
-    
+
 }
 .stageverse-1{
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%),url('/assets/images/ui-assets/women.png');background-size: 100% 100%; background-repeat: no-repeat; height: 75vh;    background-position: bottom;
@@ -669,7 +675,7 @@ color: #FFFFFF;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    
+
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -699,7 +705,7 @@ color: #FFFFFF;
     flex-basis: 50%;
 }
 .search{
-  
+
     font-weight: 500;
     width: 100%;
     height: 52px;
@@ -712,7 +718,7 @@ color: #FFFFFF;
     background: #0b091a;
 }
 .input-icon{
-   
+
     border-bottom-right-radius: 40px;
     border-top-right-radius: 40px;
     height: 52px;
@@ -724,7 +730,7 @@ color: #FFFFFF;
 }
 .leftinput{
     border: 1px solid #FFFFFF;
-   
+
     border-right: 0px;
     background: #0b091a;
     width: 38px;
