--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -5,13 +5,16 @@
                 <li> 
                     <a routerLink="/" class="logo">
                         <!-- <img src="assets/images/Stageverse_Wordmark_White.png"> -->
-                        <img src="assets/images/ui-assets/Logo-comb.png" style="height: 35px;position: relative;top: 1px;left: 21px;
+                        <img src="assets/images/ui-assets/logo-s.png" style="height: 7vh;position: relative;top: 1px;left: 21px;
                     ">
                         <!-- <img src="assets/images/ui-assets/V-logo.png" style="height: 19px;position: relative;top: 10px;right: 18px;"> -->
                     </a> 
                     <a routerLink="/" class="logo">
                         <!-- <img src="assets/images/Stageverse_Wordmark_White.png"> -->
-                        <img src="assets/images/ui-assets/logo.png" style=" height: 25px;padding-top: 5px; margin-left: 40px;">
+                        <img src="assets/images/ui-assets/logo.png" style="    height: 4vh;
+                        position: relative;
+                        margin-left: 46px;
+                        top: 1vh;">
                     </a> 
                 </li>
             </ul>
@@ -37,13 +40,13 @@
                 </li> -->
                 <li class="hide-mobile" style="display: flex;gap: 1px;">
                     <a [routerLink]="" (click)="showEarlyAccess()" action="early-access" >
-                        <img src="/assets/images/ui-assets/apple-button.png" style="height: 28px;">
+                        <img src="/assets/images/ui-assets/apple-button.png" style="height: 6vh;">
                     </a>
                     <a [routerLink]="" (click)="showEarlyAccess()" action="early-access" >
-                        <img src="/assets/images/ui-assets/android-button.png" style="height: 28px;">
+                        <img src="/assets/images/ui-assets/android-button.png" style="height: 6vh;">
                     </a>
                     <a [routerLink]="" (click)="showEarlyAccess()" action="early-access" >
-                        <img src="/assets/images/ui-assets/ring.png" style="height: 28px;">
+                        <img src="/assets/images/ui-assets/ring.png" style="height: 6vh;">
                     </a>
                 </li>
                 <!-- <li class="login">
