--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,8 +9,11 @@
                     <div class="example-collection-item left-image" >
                         <div class="left-image-text">
                             <h1 class="left-image-text-title">FUTURE CULTURE HAPPENS HERE.</h1>
+                        </div>
+                        <div class="left-image-text-box">
                             <p class="left-image-text-subtitle">Stageverse is an NFT-based world of beautifully designed 3D venues where friends and communities connect, grow, have fun, and share culture.</p>
                             <a class="left-image-text-btn btn-position" href="javascript:void(0);">Get the App <img src="/assets/images/ui-assets/black-arrow.png"/></a>
+
                         </div>
                     </div>
                 </div>
@@ -364,7 +367,7 @@
         </div>
         <div class="culture">
             <div class="example-collection-grid" >
-                <div class="example-collection-cell">
+                <div class="example-collection-cell cornor-image">
                     <div class="example-collection-item" >
                         <div class="culture-text">
                             <h1 class="culture-title" style="color: white;">MOVE CULTURE FORWARD TOGETHER</h1>
@@ -374,12 +377,26 @@
                             <a class="left-image-text-btn culture-btn create-with-us" href="javascript:void(0);">Create with us<img  class="create-img" src="/assets/images/ui-assets/black-arrow.png"/></a>
                             <a class="left-image-text-btn culture-btn join-our-discord"href="javascript:void(0);">Join our Discord<img src="/assets/images/ui-assets/black-arrow.png"/></a>
                         </div>
+                        
 
-                    </div>
+                  
+                      
+                   
                 </div>
+                
             </div>
-        </div>
+            <div class="example-collection-cell">
+                <div class="example-collection-item cluture-image-women" >
+                
 
+              
+                  
+               
+            </div>
+            
+        </div>
+        </div>
+</div>
         <div>
             <div class="container title-container">
                 <h1 class="title-sm">DOWNLOAD</h1>
@@ -476,7 +493,7 @@
                     </div>
                         <div class="footer-social-media">
                             <div class="footer-small-text">
-                                <p style="font-size: 12px;">By signing up you are agreeing to the Stageverse <a>Terms of Service</a> and Stageverse <a>Privacy Policy</a>. You may unsubscribe at any time.</p>
+                                <p style="font-size: 12px;">By signing up you are agreeing to the Stageverse <a style="text-decoration: underline;color: #fff;">Terms of Service</a> and Stageverse <a style="text-decoration: underline;color: #fff;">Privacy Policy</a>. You may unsubscribe at any time.</p>
 
                             </div>
                             <div class="social-media-footer-container">
