--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -81,7 +81,7 @@
     background-size:100% 100%;
     object-fit: cover;
     background-repeat: no-repeat;
-   
+    height: 130vh;
 
 
 }
@@ -184,13 +184,13 @@
 .simulation-2{
     background-image: linear-gradient(
         180deg
-        , rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%),url('/assets/images/ui-assets/shantel.png');background-size: auto; background-repeat: no-repeat;    background-position: center;
+        , rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%),url('/assets/images/ui-assets/shantel.png');background-size: contain; background-repeat: no-repeat;    background-position: center;
         height: 74vh;
 }
 .simulation-3{
     background-image: linear-gradient(
         180deg
-        , rgba(126, 62, 62, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%),url('/assets/images/ui-assets/rambow.png');background-size: auto; background-repeat: no-repeat;    background-position: center;
+        , rgba(126, 62, 62, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%),url('/assets/images/ui-assets/rambow.png');background-size: contain; background-repeat: no-repeat;    background-position: center;
         height: 74vh;
 }
 .paragraph{
@@ -395,13 +395,18 @@ color: #FFFFFF;
 
 }
 .membership-right{
-    background: linear-gradient(93.91deg, #0b091a00 -213.78%, rgba(0, 0, 0, 0) 195.01%), url(/assets/images/ui-assets/culture.png);
-    background-size: 88% 76%;
+    background: linear-gradient(
+82.91deg
+, #0b091a00 -213.78%, rgba(0, 0, 0, 0) 195.01%), url(/assets/images/ui-assets/culture.png);
+    background-size: 101%;
     mix-blend-mode: color-dodge;
-    transform: rotate(7.52deg);
+    transform: rotate(
+0.52deg
+);
     background-repeat: no-repeat;
-    margin-top: 18%;
-    min-height: 400px;
+    /* margin-top: 18%; */
+    min-height: 69vh;
+    background-position-x: center;
 }
 .membership-text{
     position: relative;
